--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -9,6 +9,7 @@
 
     <div class="clock">
       <div class="clock-face">
+        <div class="center"></div>
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
@@ -32,6 +33,17 @@
       flex:1;
       min-height: 100vh;
       align-items: center;
+    }
+
+    .center {
+      width: 8px;
+      height: 8px;
+      background: #BBBBBB;
+      border-radius: 50%;
+      position: relative;
+      top: 49%;
+      left: 49%;
+      z-index: 1;
     }
 
     .clock {
@@ -58,16 +70,53 @@
 
     .hand {
       width:50%;
-      height:6px;
-      background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0, 3.35, 0.58, 1);
+    }
+
+    .second-hand {
+      background: #FF6000;
+      height:2px;
+    }
+    
+    .min-hand {
+      background: #FFFFFF;
+      height:4px;
+    }
+
+    .hour-hand {
+      background: #DDDDDD;
+      height: 6px;
+      width: 40%;
+      left: 10%;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
